# grading-at-scale

./: .gitignore  LICENSE  README.md  apertus_chat.py  apertus_example.py  chat.py  data.dvc  hello.py  logic.py  login_huggingface.ipynb  main.py  outline_example.py  pyproject.toml  run_few_shot_combinations.py  saf_finetune_gemma_3.py  saf_regression.py  saf_regression_slurm.py  saf_regression_slurm.sh  test.py  utils.py
configs/: README.md  base.yaml  baseline.yaml  data_generation.yaml  dspy_eval.yaml  evaluation.yaml  evaluation_local.yaml  few_shot.yaml  finetuning.yaml  hyperparameter_search.yaml  lora_cpu_eval.yaml  lora_gridsearch.yaml  peft_lora.yaml  peft_lora_typst.yaml  synthetic_data.yaml  training.yaml  vanilla.yaml
data_prep/: gen_signatures.py
development/: main.py  pyproject.toml  scientsbank-auto.py
example_saf/: sample_inference.py  utils.py
examples/: dataset_size_notes.py
finetuneing/: finetune_gemma_3.py  outline_example.py  saf_finetun_old.py  saf_finetune.py  saf_regression.py  saf_regression_slurm.py
old/: lora_typst.py  prepare_scientsbank.py
optimisation/: base.py  common.py  evaluate_scientsbank.py  finetune_base.py  finetune_lora.py  finetune_lora_quantised.py  lora_base.py  lora_quantised.py  lora_typst.py  prepare_scientsbank.py
quantisation/: 4bit_quanto.py  quantise_4b.py  run_4b_apertus.py  run_quantise.sh
saf/: apertus_example.py  finetune_gemma_3.py  saf_finetun_old.py  saf_regression_slurm.py  saf_regression_slurm.sh
scripts/: analyze_data_distribution.py  migrate_mlflow_to_sqlite.py
src/: common.py  mlflow_config.py  model_builder.py
synthetic_data/: answer_eval.py  create_synth_dataset.py  create_synth_dataset_mass.py  eval_signatures.py  evaluate_answers.py  evaluate_answers_mass.py  gen_signatures.py  json_to_csv.py  logic.py  model_builder.py  (+1 more)
(+62 files in other folders)
