[project]
name = "grading-at-scale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "dotenv>=0.9.9",
    "dspy>=3.0.2",
    "evaluate>=0.4.5",
    "huggingface-hub>=0.34.4",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "litellm[proxy]>=1.75.3",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.2",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "outlines>=1.2.4",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
    "trl>=0.21.0",
]
